# HFF-Remover

./: README.md  pyproject.toml
.github/workflows/: set-default-branch-protection.yml
src/hff_remover/: detector.py
tests/: test_detector.py
